--- a/Inventario/Inventario/Views/Tabla_Proveedores/Index.cshtml
+++ b/Inventario/Inventario/Views/Tabla_Proveedores/Index.cshtml
@@ -91,3 +91,19 @@
                 @Html.ActionLink("Generar PDF", "GeneratePDF", null, htmlAttributes: new { @class = "btn btn-info" })
 
             </div>
+@*
+    <td>
+                               @Html.ActionLink(" ", "Edit", new { id = item.clienteID }, htmlAttributes: new { @class = "glyphicon glyphicon-pencil" })
+
+                           </td>
+                           <td>
+                               @Html.ActionLink(" ", "Details", new { id = item.clienteID }, htmlAttributes: new { @class = "glyphicon glyphicon-eye-open" })
+                           </td>
+                           <td>
+                               @Html.ActionLink(" ", "Delete", new { id = item.clienteID }, htmlAttributes: new { @class = "glyphicon glyphicon-trash" })
+                           </td>
+                           <td>
+                               @Html.ActionLink(" ", "GeneratePDF2", new { id = item.clienteID }, htmlAttributes: new { @class = "glyphicon glyphicon-file" })
+                           </td>
+*@
+
