--- a/Inventario/Inventario/Views/Shared/_Layout.cshtml
+++ b/Inventario/Inventario/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @*@Styles.Render("~/Content/css")*@
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+    <link href="~/content/bootstrap.min.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/bootstrap")
     @Styles.Render("~/assets/css/main.css")
     @Scripts.Render("~/bundles/modernizr")
@@ -14,6 +15,7 @@
     @Scripts.Render("~/assets/js/skel.min.js")
     @Scripts.Render("~/assets/js/util.js")
     @Scripts.Render("~/assets/js/main.js")
+    
     
    
 </head>
